--- a/Contracts/package.json
+++ b/Contracts/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "abswapx",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "@ethersproject/abi": "^5.4.7",
-    "@ethersproject/providers": "^5.4.7",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "chai": "^4.2.0",
-    "ethers": "^5.4.7",
-    "hardhat": "^2.11.1",
-    "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.0",
-    "typechain": "^8.1.0"
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "@chainlink/contracts": "^0.6.1",
-    "@connext/interfaces": "^2.0.3",
-    "@connext/nxtp-contracts": "^0.2.1-rc.16",
-    "@openzeppelin/contracts": "^4.8.2",
-    "@openzeppelin/contracts-upgradeable": "^4.8.2",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "@uniswap/v3-periphery": "^1.4.3",
-    "node-fetch": "^3.3.1",
-    "web3": "^1.9.0",
-    "yesno": "^0.4.0"
+    "@headlessui/react": "^1.7.13",
+    "@heathmont/moon-core-tw": "^9.28.1",
+    "@rainbow-me/rainbowkit": "0.11.0",
+    "axios": "^1.3.5",
+    "daisyui": "^2.51.5",
+    "ethers": "^5.7.2",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-blockies": "^1.4.1",
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
+    "react-icons": "^4.7.1",
+    "react-lottie-player": "^1.5.0",
+    "react-toastify": "^9.1.1",
+    "wagmi": "0.11.7",
+    "web3": "^1.9.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.3",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.26.0",
+    "eslint-config-next": "^13.2.4",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "typescript": "4.8.4"
   }
 }
