--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "postcss": "8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "@headlessui/react": "^1.7.13",
+    "@heathmont/moon-core-tw": "^9.28.1",
+    "@rainbow-me/rainbowkit": "^0.8.0",
+    "axios": "^1.3.5",
+    "daisyui": "^2.51.5",
+    "ethers": "^5.7.2",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-blockies": "^1.4.1",
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
+    "react-icons": "^4.7.1",
+    "react-lottie-player": "^1.5.0",
+    "react-toastify": "^9.1.1",
+    "wagmi": "^0.8.9",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.1"
+    "@types/node": "18.11.3",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.26.0",
+    "eslint-config-next": "^13.2.4",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
+    "typescript": "4.8.4"
   }
 }
