--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heathmont/moon-core-tw": "^9.28.1",
-    "@rainbow-me/rainbowkit": "^0.8.0",
+    "@rainbow-me/rainbowkit": "0.11.0",
     "axios": "^1.3.5",
     "daisyui": "^2.51.5",
     "ethers": "^5.7.2",
@@ -20,7 +20,7 @@
     "react-icons": "^4.7.1",
     "react-lottie-player": "^1.5.0",
     "react-toastify": "^9.1.1",
-    "wagmi": "^0.8.9",
+    "wagmi": "0.11.7",
     "web3": "^1.9.0"
   },
   "devDependencies": {
